--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
 
     <h1>Very Long Scroll</h1>
     <div class="loader" id="loader" hidden>
-        <img src="loader.svg" alt="Loading">
+        <img src="svg/loader.svg" alt="Loading">
     </div>
-
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1601237638950-cf0c4c46c37d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+            alt="">
+        <img src="https://images.unsplash.com/photo-1601237638950-cf0c4c46c37d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+            alt="">
+        <img src="https://images.unsplash.com/photo-1601237638950-cf0c4c46c37d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
+            alt="">
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
