--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1>Very Long Scroll</h1>
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="svg/loader.svg" alt="Loading">
     </div>
     <div class="image-container" id="image-container">
